# hashes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PACKAGING.md  README.md  conftest.py  justfile  meson.build  mypy.ini  pyproject.toml
.github/workflows/: release.yml
assets/: meson.build
data/: io.github.zefr0x.hash_identifier.desktop.in  io.github.zefr0x.hash_identifier.metainfo.xml.in  io.github.zefr0x.hashes.desktop.in  io.github.zefr0x.hashes.metainfo.xml.in  meson.build
data/icons/: meson.build
hash_identifier/: __about__.py  __main__.py  meson.build
hash_identifier/ui/: __init__.py  main.py  main_window.py  meson.build  utils.py
hashes/: __about__.py  __main__.py  meson.build
hashes/ui/: main.py  main_window.py  meson.build  utils.py
po/: LINGUAS  POTFILES  README.md  ar.po  bg.po  es.po  hi.po  io.github.zefr0x.hash_identifier.pot  io.github.zefr0x.hashes.pot  it.po  meson.build  nb.po  pt_BR.po  ru.po  tr.po  zh_CN.po
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
